FIXED: Fix a layout issue with food item in the editor
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@34586 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/food-menu/_editor.scss
+++ b/src/blocks/food-menu/_editor.scss
@@ -59,7 +59,7 @@
   [role="textbox"] {
     // Give a min-width to text boxes so that they
     // don't disappear when focused.
-    min-width: 35px;
+    min-width: 50px !important;
   }
 
   [data-type="gutenbee/image"] {
